feat: add notes to exercises

--- a/client/src/pages/home/home.html
+++ b/client/src/pages/home/home.html
@@ -32,6 +32,7 @@
           (removeExercise)="removeExercise($event)"
           (removeSet)="removeSet($event.id, $event.index)"
           (updateSet)="updateSet($event.id, $event.index, $event.type, $event.value)"
+          (updateExercise)="updateExercise($event)"
         />
       }
 
